--- a/src/app/a-fr-reports/a-fr-reports.component.html
+++ b/src/app/a-fr-reports/a-fr-reports.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div>
-    <h5 id="step" class="text-center">Listes des Reports</h5>
+    <h5 id="step" class="text-center">List des Reports</h5>
   </div>
 
   <div>
@@ -20,8 +20,6 @@
 
     <img src="/assets/img/location.png" width="20" height="25" class="d-inline-block align-top" alt=""> Borj Cedria
 
-    &nbsp;
-    <img src="/assets/img/fr.png" width="30" height="25" class="rounded ms-auto" routerLink="/" alt="">
     &nbsp;
     <img src="/assets/img/settings.png" width="30" height="25" routerLink="/" alt="">
     &nbsp;
@@ -90,10 +88,10 @@
     }
   }
 </style>
-
+<br>
+<br>
 <div class="sidebar">
-  <br>
-  <br>
+
   <a  routerLink="/a-fr-accounts"><img src="/assets/img/laccounts.png" width="30" height="30" style="float: left;" alt="">&nbsp;&nbsp;Comptes</a>
   <a  routerLink="/a-fr-reports" class="active" ><img src="/assets/img/lreports.png" width="30" height="30"
       style="filter:invert(1); float: left;" alt="">&nbsp;&nbsp;Reports</a>
@@ -102,8 +100,7 @@
     <a  routerLink="/a-fr-events"><img src="/assets/img/calendar-fill.png" width="30" height="30" style="filter:invert(1); float: left;" alt="">&nbsp; Événements</a>
 </div>
 
-<div class="content">
-  <br><br>
+<div id="news" class="content">
 
   <div class="card text-white bg-secondary mb-3">
     <div class="card-body">
@@ -134,28 +131,56 @@
   <div class="card text-white bg-secondary mb-3">
     <div class="card-body">
       <h5 class="card-title">
-        <img src="/assets/img/di-med.png" width="40" height="40" style="float: left;" alt="">
-        &nbsp;&nbsp;Corbeille de Guérison &nbsp;
-        <img src="/assets/img/person-fill.png" width="20" height="20" style=" float: center;" alt=""> User &nbsp;
-        <img src="/assets/img/calendar.png" width="20" height="20" style=" float: center;" alt=""> 2022/02/01
-        <img src="/assets/img/remove.png" width="20" height="20" style="float: right;" alt="">
-        <img src="/assets/img/empty.png" width="10" height="10" style="float: right;" alt="">
-        <img src="/assets/img/modify.png" width="20" height="20" style="float: right;" alt="">
-        <img src="/assets/img/empty.png" width="10" height="10" style="float: right;" alt="">
-        <img src="/assets/img/accept.png" width="20" height="20" style="float: right;" alt="">
+        <label for="idtitlex">Title</label>
+        <input type="text" class="form-control" id="idtitlex" placeholder="title">
+        <label for="idtitlex">Subject</label>
+        <textarea  type="textarea" class="form-control" id="idsubjectx" placeholder="subject" rows="3"></textarea>
+        <label for="idtitlex">Desciption</label>
+        <textarea  type="textarea" class="form-control" id="iddescriptionx" placeholder="description" rows="5"></textarea>
+        <label for="idtypex">Type</label>
+      <select id="idtypex" class="form-control">
+        <option selected  value="type_domestic">Domestique</option>
+        <option value="type_domestic">Domestique</option>
+        <option value="type_medical">Médical</option>
+        <option value="type_chemical">Chémique</option>
+        <option value="type_toxic">Toxique</option>
+        <option value="type_brokenroad">Route Cassée</option>
+        <option value="type_obstacleroad">R.Obstacle</option>
+        <option value="type_train">Train Panne</option>
+      </select>
+      <br>
+      Nouvelles Images
+      <br>   <br>
+      <button type="file" (click)="picupload()" accept="image/*" class="btn btn-success">
+        <img src="/assets/img/arrow-bar-up.png" width="30" height="25" style="filter: invert(1); float: left;"
+          alt="">&nbsp; Télecharger</button>
+          <br>   <br>
+      <div class=" row">
+          <div class="col" style="background-color: aliceblue;" id="pic1">&nbsp;</div>&nbsp;
+          <div class="col" style="background-color: aliceblue;" id="pic2">&nbsp;</div>&nbsp;
+          <div class="col" style="background-color: aliceblue;" id="pic3">&nbsp;</div>&nbsp;
+          <div class="col" style="background-color: aliceblue;" id="pic4">&nbsp;</div>&nbsp;
+          <div class="col" style="background-color: aliceblue;" id="pic5">&nbsp;</div>
+      </div>
+      <br>
+
+      Images Actuelles
+      <br>
+      <br>
+      <img src="assets/img/exp1.jpg" width="150" height="125"> &nbsp;
+      <img src="assets/img/exp2.jpg" width="150" height="125"> &nbsp;
+      <img src="assets/img/empty.jpg" width="150" height="125"> &nbsp;
+      <img src="assets/img/empty.jpg" width="150" height="125"> &nbsp;
+      <img src="assets/img/empty.jpg" width="150" height="125">
       </h5> &nbsp;
-      <p class="card-text">Déchets médiaux en sac jaune standard trouvés dans la forêt de borj cedria.</p>
-      <p class="card-text bg-dark">Dans la pinède de borj cedria, autour des buissons et des arbres légèrement proches
-        de l'entrée de la gare, un sac poubelle médical ouvert contenant des déchets médicaux tels que des aiguilles y a
-        été retrouvé.</p>
-      <hr>
-      <img src="assets/img/exp1.jpg" width="150" height="125">
-      <img src="assets/img/exp2.jpg" width="150" height="125">
-      <img src="assets/img/empty.jpg" width="150" height="125">
-      <img src="assets/img/empty.jpg" width="150" height="125">
-      <img src="assets/img/empty.jpg" width="150" height="125">
+<br>
+      <button type="file" (click)="modify('d')" accept="image/*" class="btn text-end btn-warning">
+        <img src="/assets/img/arrow-bar-up.png" width="30" height="25" style="filter: invert(1); float: left;"
+          alt="">&nbsp; Modifier</button>
+
     </div>
   </div>
+ 
 
 
 </div>
